# sekha-mcp

./: .env.example  .gitignore  Dockerfile  README.md  config.py  health.py  llm_client.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  security.yml
coverage/: class_index.html  function_index.html  index.html  status.json  z_78017f6a6b5e4dec___init___py.html  z_78017f6a6b5e4dec_client_py.html  z_78017f6a6b5e4dec_config_py.html  z_78017f6a6b5e4dec_health_py.html  z_78017f6a6b5e4dec_main_py.html  z_78017f6a6b5e4dec_models_py.html  z_78017f6a6b5e4dec_server_py.html  z_787dc7560656bdd0___init___py.html  z_787dc7560656bdd0_memory_export_py.html  z_787dc7560656bdd0_memory_get_context_py.html  z_787dc7560656bdd0_memory_prune_py.html  z_787dc7560656bdd0_memory_search_py.html  z_787dc7560656bdd0_memory_stats_py.html  z_787dc7560656bdd0_memory_store_py.html  z_787dc7560656bdd0_memory_update_py.html
scripts/: test.sh
src/sekha_mcp/: __init__.py  client.py  config.py  health.py  main.py  models.py  server.py
src/sekha_mcp/tools/: __init__.py  memory_export.py  memory_get_context.py  memory_prune.py  memory_search.py  memory_stats.py  memory_store.py  memory_update.py
tests/: memory_update_tool.py  test_client.py  test_health.py  test_integration.py  test_main.py  test_memory_search_tool.py  test_memory_store_tool.py  test_server.py  test_server_minimal.py  test_tools.py  test_tools_unit.py
tests/common/: mod.rs
