[project]
name = "sekha-mcp"
version = "1.0.0"
description = "Model Context Protocol server for Project Sekha - Persistent AI Memory Controller"
authors = [{name = "Sekha AI", email = "jeff@sekha-ai.dev"}]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",                    # Latest stable MCP SDK
    "httpx>=0.28.0",                 # Latest with HTTP/2 support
    "pydantic>=2.10.0",              # Latest with performance improvements
    "pydantic-settings>=2.7.0",      # Latest settings management
    "python-dotenv>=1.0.1",          # Latest env file support
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",                 # Latest pytest
    "pytest-asyncio>=0.25.0",        # Latest async support
    "pytest-cov>=6.0.0",             # Latest coverage
    "pytest-xdist>=3.6.0",           # Parallel test execution
    "black>=25.1.0",                # Latest code formatter
    "ruff>=0.8.0",                   # Latest linter (2025 standard)
    "pre-commit>=4.0.0",             # Latest pre-commit hooks
]

[build-system]
requires = ["hatchling>=1.26.0"]    # Modern, fast build backend
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sekha_mcp"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=sekha_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=85",  # World-class coverage standard
    "--strict-markers",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "integration: Integration tests requiring external services",
    "unit: Fast unit tests",
]

[project.scripts]
sekha-mcp = "sekha_mcp.server:main"

[project.urls]
Homepage = "https://github.com/sekha-ai/sekha-mcp"
Repository = "https://github.com/sekha-ai/sekha-mcp"
Issues = "https://github.com/sekha-ai/sekha-mcp/issues"